--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 
   
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x.x/dist/vue.min.js"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </body>
 </html>
